# telegram-proxy-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/telegram_proxy_api/: __init__.py  app.py  auth_cli.py  config.py  dependencies.py  errors.py  gateway.py  main.py  models.py  responses.py  serializers.py  session.py
tests/: conftest.py  test_app.py  test_config.py  test_entrypoints.py  test_gateway.py  test_serializers.py  test_session.py
tests/e2e/: test_personal_telegram.py
